--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      background: #000;
+      color: #fff;
       padding: 20px;
     }
     h1 {
@@ -25,7 +26,7 @@
     .preview img, .preview video {
       max-width: 300px;
       max-height: 200px;
-      border: 1px solid #ccc;
+      border: 2px solid #555;
       border-radius: 8px;
     }
   </style>
