--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #121212; /* Dark gray */
+      background: #121212; /* Dark gray background */
       color: #f0f0f0;
       padding: 20px;
     }
@@ -49,7 +49,6 @@
     function previewFiles(event) {
       const files = event.target.files;
       const previewContainer = document.getElementById('preview');
-      previewContainer.innerHTML = ''; 
 
       Array.from(files).forEach(file => {
         const reader = new FileReader();
