--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <div class="sidebar">
     <h2>Menu</h2>
     <a href="index.html">Saved Links</a>
+    <a href="hidden.html">Hidden Links</a>
+
   </div>
 
   <div class="main">
@@ -25,37 +27,49 @@
   </div>
 
   <script>
-    const form = document.getElementById('linkForm');
-    const linkList = document.getElementById('linkList');
+  const form = document.getElementById('linkForm');
+  const linkList = document.getElementById('linkList');
+  const savedLinks = JSON.parse(localStorage.getItem('links') || '[]');
 
-    const savedLinks = JSON.parse(localStorage.getItem('links') || '[]');
+  function displayLinks() {
+    linkList.innerHTML = '';
+    savedLinks.forEach((link, index) => {
+      const div = document.createElement('div');
+      div.innerHTML = `
+        <h3>
+          <a href="${link.url}" target="_blank">${link.name}</a>
+          <span class="delete-btn" onclick="confirmDelete(${index})">🗑️</span>
+        </h3>
+        <p>${link.description}</p>
+      `;
+      linkList.appendChild(div);
+    });
+  }
 
-    function displayLinks() {
-      linkList.innerHTML = '';
-      savedLinks.forEach((link, i) => {
-        const div = document.createElement('div');
-        div.innerHTML = `
-          <h3><a href="${link.url}" target="_blank">${link.name}</a></h3>
-          <p>${link.description}</p>
-        `;
-        linkList.appendChild(div);
-      });
-    }
-
-    form.onsubmit = e => {
-      e.preventDefault();
-      const link = {
-        name: document.getElementById('name').value,
-        url: document.getElementById('url').value,
-        description: document.getElementById('description').value
-      };
-      savedLinks.push(link);
+  function confirmDelete(index) {
+    const confirmed = confirm("Are you sure you want to permanently delete this website? This action cannot be undone.");
+    if (confirmed) {
+      savedLinks.splice(index, 1);
       localStorage.setItem('links', JSON.stringify(savedLinks));
-      form.reset();
       displayLinks();
-    };
+    }
+  }
 
+  form.onsubmit = e => {
+    e.preventDefault();
+    const link = {
+      name: document.getElementById('name').value,
+      url: document.getElementById('url').value,
+      description: document.getElementById('description').value
+    };
+    savedLinks.push(link);
+    localStorage.setItem('links', JSON.stringify(savedLinks));
+    form.reset();
     displayLinks();
-  </script>
+  };
+
+  displayLinks();
+</script>
+
 </body>
 </html>
