--- a/public/hidden.html
+++ b/public/hidden.html
@@ -91,16 +91,29 @@
     };
 
     function displayLinks() {
-      linkList.innerHTML = '';
-      hiddenLinks.forEach(link => {
-        const div = document.createElement('div');
-        div.innerHTML = `
-          <h3><a href="${link.url}" target="_blank">${link.name}</a></h3>
-          <p>${link.description}</p>
-        `;
-        linkList.appendChild(div);
-      });
-    }
+  linkList.innerHTML = '';
+  hiddenLinks.forEach((link, index) => {
+    const div = document.createElement('div');
+    div.innerHTML = `
+      <h3>
+        <a href="${link.url}" target="_blank">${link.name}</a>
+        <span class="delete-btn" onclick="confirmHiddenDelete(${index})">🗑️</span>
+      </h3>
+      <p>${link.description}</p>
+    `;
+    linkList.appendChild(div);
+  });
+}
+
+function confirmHiddenDelete(index) {
+  const confirmed = confirm("Are you sure you want to permanently delete this hidden website? This action cannot be undone.");
+  if (confirmed) {
+    hiddenLinks.splice(index, 1);
+    localStorage.setItem('hiddenLinks', JSON.stringify(hiddenLinks));
+    displayLinks();
+  }
+}
+
   </script>
 </body>
 </html>
