--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Saved Links</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Sidebar -->
   <div class="sidebar">
     <h2>Menu</h2>
     <a href="index.html">Saved Links</a>
     <a href="hidden.html">Hidden Links</a>
-
   </div>
 
+  <!-- Main Content -->
   <div class="main">
     <h1>Save Website Links</h1>
     <form id="linkForm">
@@ -26,50 +27,80 @@
     <div id="linkList"></div>
   </div>
 
+  <!-- Delete Confirmation Modal -->
+  <div id="deleteModal">
+    <div id="deleteModalContent">
+      <h2>Are you sure you want to permanently delete this website?</h2>
+      <div class="modal-buttons">
+        <button onclick="closeModal()">Cancel</button>
+        <button class="danger" onclick="confirmDeleteFinal()">Delete</button>
+      </div>
+    </div>
+  </div>
+
   <script>
-  const form = document.getElementById('linkForm');
-  const linkList = document.getElementById('linkList');
-  const savedLinks = JSON.parse(localStorage.getItem('links') || '[]');
+    // Retrieve existing normal links from localStorage
+    const savedLinks = JSON.parse(localStorage.getItem('links') || '[]');
+    const form = document.getElementById('linkForm');
+    const linkList = document.getElementById('linkList');
 
-  function displayLinks() {
-    linkList.innerHTML = '';
-    savedLinks.forEach((link, index) => {
-      const div = document.createElement('div');
-      div.innerHTML = `
-        <h3>
-          <a href="${link.url}" target="_blank">${link.name}</a>
-          <span class="delete-btn" onclick="confirmDelete(${index})">🗑️</span>
-        </h3>
-        <p>${link.description}</p>
-      `;
-      linkList.appendChild(div);
-    });
-  }
+    // Index of the link pending deletion
+    let deleteIndex = null;
 
-  function confirmDelete(index) {
-    const confirmed = confirm("Are you sure you want to permanently delete this website? This action cannot be undone.");
-    if (confirmed) {
-      savedLinks.splice(index, 1);
-      localStorage.setItem('links', JSON.stringify(savedLinks));
-      displayLinks();
+    // Display all normal links
+    function displayLinks() {
+      linkList.innerHTML = '';
+      savedLinks.forEach((link, index) => {
+        const div = document.createElement('div');
+        div.innerHTML = `
+          <h3>
+            <a href="${link.url}" target="_blank">${link.name}</a>
+            <span class="delete-btn" onclick="confirmDelete(${index})">🗑️</span>
+          </h3>
+          <p>${link.description}</p>
+        `;
+        linkList.appendChild(div);
+      });
     }
-  }
 
-  form.onsubmit = e => {
-    e.preventDefault();
-    const link = {
-      name: document.getElementById('name').value,
-      url: document.getElementById('url').value,
-      description: document.getElementById('description').value
+    // Show modal and store index for deletion
+    function confirmDelete(index) {
+      deleteIndex = index;
+      document.getElementById('deleteModal').style.display = 'flex';
+    }
+
+    // Close modal without deleting
+    function closeModal() {
+      document.getElementById('deleteModal').style.display = 'none';
+      deleteIndex = null;
+    }
+
+    // If confirmed, remove the link and update localStorage
+    function confirmDeleteFinal() {
+      if (deleteIndex !== null) {
+        savedLinks.splice(deleteIndex, 1);
+        localStorage.setItem('links', JSON.stringify(savedLinks));
+        displayLinks();
+      }
+      closeModal();
+    }
+
+    // Handle form submission (add new link)
+    form.onsubmit = e => {
+      e.preventDefault();
+      const link = {
+        name: document.getElementById('name').value,
+        url: document.getElementById('url').value,
+        description: document.getElementById('description').value
+      };
+      savedLinks.push(link);
+      localStorage.setItem('links', JSON.stringify(savedLinks));
+      form.reset();
+      displayLinks();
     };
-    savedLinks.push(link);
-    localStorage.setItem('links', JSON.stringify(savedLinks));
-    form.reset();
+
+    // Initial render
     displayLinks();
-  };
-
-  displayLinks();
-</script>
-
+  </script>
 </body>
 </html>
